Fix to keep text from overlapping profile photo

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,8 +124,9 @@ img {
 }
 
 .profile-metadata{
-  padding: 0.5% 2% 0.5% 2%;
+  padding: 0.5% 35% 0.5% 35%;
   margin: 0;
+  width: 30%;
   background-color: #cccdff;
   text-align: center;
 }
